# boxas

./: .gitignore  README.md  cfg_foils.yaml  pyproject.toml
data/: Pd_foil_bioxas.xdi
notebooks/: delete_optuna_studies.sh  j01-optimize-feff.ipynb  j02-plot-spectra.ipynb  j03-build-tables.ipynb
src/boxas/: config.py  exp_data.py  latex_tables.py  load_xmu.py  loss.py  make_atoms.py  plot_optuna_results.py  plot_spectra.py  runners.py  utils.py  xasopt.py
templates/: fdmfile.txt  fdmnes-exafs-header.j2  fdmnes-xanes-header.j2  feff-exafs-header.j2  feff-scf-xanes-header.j2  feff-xanes-header.j2
