[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["boxas"]  
package-dir = {"" = "src"}

# Optional: include non-code files
[tool.setuptools.package-data]
"project_a" = ["*.txt", "*.json"]

[tool.uv.sources]
xasproc = { git = "https://github.com/ITCP-AKG/xasproc.git" }

[project]
name = "boxas"
version = "0.1.0"
description = "Study of Bayesian optimization of XAS simulation"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ase>=3.26.0",
    "ipykernel>=6.29.5",
    "jinja2>=3.1.6",
    "matplotlib>=3.10.5",
    "optuna>=4.4.0",
    "pandas>=2.3.0",
    "pathos>=0.3.4",
    "plotly[kaleido]>=6.3.0",
    "pymysql>=1.1.1",
    "seaborn>=0.13.2",
    "xasproc",
]
